# radio-package

./: .gitignore  CHANGES.txt  LICENSE.txt  MANIFEST  README.rst  README.txt  pyproject.toml  setup.py
radio/: CHANGES.txt  cli.py  control.py
radio/data/: radios.json
tests/: test_radio.py
