[tool.poetry]
name = "radio"
version = "0.1.1"
description = "Just listen to the radio"
authors = ["Santiago Pestarini <santiagonob@gmail.com>"]
license = "WTFPL"
readme = "README.rst"
homepage = "https://github.com/quijot/radio-package"
packages = [{ include = "radio" }]

[tool.poetry.dependencies]
python = ">=3.6"
click = "^7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
rstcheck = "^3.3.1"

[tool.poetry.scripts]
radio = "radio.cli:radio"

[tool.black]
line-length = 88
target-version = ["py36"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
